feat: beacon blocks
